Refactor array comparison code into a compare.h header and compilation unit. Use visitor pattern. Also may resolve Xcode bug reported in ARROW-519

Change-Id: I288609704858f34f3e6a9fff442db9981144d862