cpp/src/arrow/util/macros.h
@@ -25,4 +25,6 @@
   TypeName& operator=(const TypeName&) = delete
 #endif
 
+#define UNUSED(x) (void)x
+
 #endif  // ARROW_UTIL_MACROS_H
